--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: rgb(22,30,10);
+  color: rgb(210,210,210);
   font-family: Arial, Helvetica, sans-serif;
 }
